--- a/src/data/blog/canvas-text-wrap.mdx
+++ b/src/data/blog/canvas-text-wrap.mdx
@@ -20,7 +20,7 @@ HTML canvas 绘制文本时不支持换行，一般情况下可以通过 html2ca
 
 Canvas2D 环境中，可以使用`fillText`API 来绘制文本。该 API 的语法如下：
 
-```JavaScript
+```javascript
 void ctx.fillText(text, x, y [, maxWidth]);
 ```
 
